[tool.poetry]
name = "oop_claster"
version = "0.1.0"
description = ""
authors = ["VikVyaz <gluckundhappy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "24.10.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
coverage = "7.6.9"
et-xmlfile = "2.0.0"
finnhub-python = "2.4.22"
flake8 = "7.1.1"
idna = "3.10"
iniconfig = "2.0.0"
isort = "5.13.2"
mccabe = "0.7.0"
mock = "5.1.0"
mypy = "1.13.0"
mypy-extensions = "1.0.0"
numpy = "2.2.0"
openpyxl = "3.1.5"
packaging = "24.2"
pandas = "2.2.3"
pandas-stubs = "2.2.3.241126"
pathspec = "0.12.1"
platformdirs = "4.3.6"
pluggy = "1.5.0"
poetry-core = "1.9.0"
pycodestyle = "2.12.1"
pyflakes = "3.2.0"
pytest = "8.3.4"
pytest-cov = "5.0.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
requests = "2.32.3"
six = "1.17.0"
types-python-dateutil = "2.9.0.20241206"
types-pytz = "2024.2.0.20241003"
types-requests = "2.32.0.20240914"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
